Added user prompt capabilities

--- a/Youtube_Analysis.ipynb
+++ b/Youtube_Analysis.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# YouTube Comments Sentiment Analysis\n",
-    "Andie Donovan "
+    "(Andie's Version --- In Progress)"
    ]
   },
   {
@@ -24,10 +24,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Basics\n",
