--- a/Youtube_Analysis.ipynb
+++ b/Youtube_Analysis.ipynb
@@ -5,7 +5,8 @@
    "metadata": {},
    "source": [
     "# YouTube Comments Sentiment Analysis\n",
-    "(Andie's Version --- In Progress)"
+    "Andie Donovan\n",
+    "Spring 2018"
    ]
   },
   {
@@ -24,8 +25,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
+   "execution_count": 37,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Basics\n",
@@ -40,15 +43,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1.2 Read Data\n",
-    "Note that we have to use encoding = \"latin-1\" instead of UTF-8 because we have foreign languages present\n",
-    "The different encodings treat characters differently (in latin-1 each character is only one byte long whereas in utf-8 it can me more than one byte in length). Typically utf-8 captures more types of characters, so it was surprising that we had to use latin-8. \n",
-    "* for later: look into this more: http://www.unicode.org/reports/tr10/"
+    "### 1.2 Read In Data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 38,
    "metadata": {
     "collapsed": true
    },
@@ -62,28 +62,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "df.head(5)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### 1.2.1 Clean Data Columns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "execution_count": 39,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "# rename the columns\n",
     "df.columns = [\n",
     "  'label',\n",
     "  'comment','a','b'\n",
     "]\n",
-    "df = df.drop(['a', 'b'], axis = 1).dropna() # drop column 3 and missing values"
+    "df = df.drop(['a', 'b'], axis = 1).dropna() # drop columns 3 and 4 and missing values"
    ]
   },
   {
@@ -95,10 +89,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 40,
+   "metadata": {},
    "outputs": [],
    "source": [
     "for row in range(len(df)):\n",
@@ -122,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -136,16 +128,6 @@
       "[nltk_data]     /Users/andiedonovan/nltk_data...\n",
       "[nltk_data]   Package wordnet is already up-to-date!\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -154,7 +136,7 @@
     "\n",
     "# tokenizer = nltk.tokenize.WhitespaceTokenizer()\n",
     "nltk.download('punkt')\n",
-    "nltk.download('wordnet')"
+    "nltk.download('wordnet');"
    ]
   },
   {
@@ -166,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 44,
    "metadata": {
     "collapsed": true
    },
@@ -184,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -210,12 +192,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.3 Lemmatization (and Stemming?)"
+    "### 2.3 Lemmatization and Stemming"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 46,
    "metadata": {
     "collapsed": true
    },
