--- a/dash/Classifyer.ipynb
+++ b/dash/Classifyer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -115,13 +115,13 @@
        "</div>"
       ],
       "text/plain": [
-       "    1                                 Hispanic for Trump!\n",
-       "0  -1   Taking down this video for copyright infringem...\n",
-       "1  -1   This speech literaly ripped off the Dark Knigh...\n",
-       "2  -1                                            Poop him"
+       "   1                                 Hispanic for Trump!\n",
+       "0  -1  Taking down this video for copyright infringem...\n",
+       "1  -1  This speech literaly ripped off the Dark Knigh...\n",
+       "2  -1                                           Poop him"
       ]
      },
-     "execution_count": 133,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +183,7 @@
        "(467, 2)"
       ]
      },
-     "execution_count": 136,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -191,6 +191,29 @@
    "source": [
     "df_copy = df.copy()\n",
     "df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       " 0    87\n",
+       " 1    56\n",
+       "-1    56\n",
+       "Name: label, dtype: int64"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "trump[\"label\"].value_counts()"
    ]
   },
   {
